--- a/Pokedex/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Pokedex/Base.lproj/Main.storyboard
@@ -10,18 +10,27 @@
         <!--Pokedex-->
         <scene sceneID="pgA-Dp-kCZ">
             <objects>
-                <tableViewController id="QKi-3O-ito" sceneMemberID="viewController">
+                <tableViewController id="QKi-3O-ito" customClass="PokedexTableViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="egR-ue-Rrj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="pokeCell" id="cwg-b1-vyk">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="pokeCell" textLabel="lFo-pf-DZr" style="IBUITableViewCellStyleDefault" id="cwg-b1-vyk">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cwg-b1-vyk" id="HVf-7v-3Sb">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lFo-pf-DZr">
+                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="qIw-F5-fgg" kind="show" identifier="pokeDetailSegue" id="oue-lY-Ei8"/>
@@ -43,19 +52,22 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="idT-O8-sx5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1028.985507246377" y="-181.47321428571428"/>
+            <point key="canvasLocation" x="946" y="-181"/>
         </scene>
         <!--Pokemon Search-->
         <scene sceneID="RqH-RL-JRm">
             <objects>
-                <viewController id="qIw-F5-fgg" sceneMemberID="viewController">
+                <viewController id="qIw-F5-fgg" customClass="PokeSearchViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ctN-Qd-eEk">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" searchBarStyle="prominent" translatesAutoresizingMaskIntoConstraints="NO" id="5Kc-AV-ocT">
+                            <searchBar contentMode="redraw" searchBarStyle="prominent" placeholder="Search by name or id:" translatesAutoresizingMaskIntoConstraints="NO" id="5Kc-AV-ocT">
                                 <rect key="frame" x="0.0" y="160" width="414" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="qIw-F5-fgg" id="nTd-Bp-Ut7"/>
+                                </connections>
                             </searchBar>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="NX3-0A-sWQ">
                                 <rect key="frame" x="20" y="567" width="374" height="119.5"/>
@@ -113,6 +125,13 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijY-po-YDe">
+                                <rect key="frame" x="156.5" y="706.5" width="101" height="30"/>
+                                <state key="normal" title="Save Pokemon"/>
+                                <connections>
+                                    <action selector="saveTapper:" destination="qIw-F5-fgg" eventType="touchUpInside" id="leF-Mo-QwB"/>
+                                </connections>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="e87-bt-pbf">
                                 <rect key="frame" x="82" y="236" width="250" height="311"/>
                                 <subviews>
@@ -136,6 +155,8 @@
                         <constraints>
                             <constraint firstItem="5Kc-AV-ocT" firstAttribute="top" secondItem="nXX-lL-DW3" secondAttribute="top" constant="20" id="6fP-ne-fWj"/>
                             <constraint firstItem="5Kc-AV-ocT" firstAttribute="centerX" secondItem="ctN-Qd-eEk" secondAttribute="centerX" id="AAI-Ro-uzT"/>
+                            <constraint firstItem="ijY-po-YDe" firstAttribute="top" secondItem="NX3-0A-sWQ" secondAttribute="bottom" constant="20" id="HJb-2E-etE"/>
+                            <constraint firstItem="ijY-po-YDe" firstAttribute="centerX" secondItem="ctN-Qd-eEk" secondAttribute="centerX" id="SDn-Ey-0FC"/>
                             <constraint firstItem="nXX-lL-DW3" firstAttribute="trailing" secondItem="NX3-0A-sWQ" secondAttribute="trailing" constant="20" id="UUO-9u-g3O"/>
                             <constraint firstItem="NX3-0A-sWQ" firstAttribute="top" secondItem="e87-bt-pbf" secondAttribute="bottom" constant="20" id="YQh-Qv-2Km"/>
                             <constraint firstItem="5Kc-AV-ocT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nXX-lL-DW3" secondAttribute="leading" id="e9C-0o-LTQ"/>
@@ -148,6 +169,15 @@
                         <viewLayoutGuide key="safeArea" id="nXX-lL-DW3"/>
                     </view>
                     <navigationItem key="navigationItem" title="Pokemon Search" id="fYp-11-9MZ"/>
+                    <connections>
+                        <outlet property="abilitiesLabel" destination="i4t-ih-9D6" id="K5S-ZX-c3C"/>
+                        <outlet property="idLabel" destination="eWu-cE-G6d" id="aKh-05-fVq"/>
+                        <outlet property="imageView" destination="BYp-a6-LDe" id="wTL-Vy-9sc"/>
+                        <outlet property="nameLabel" destination="Wij-Tr-Jxh" id="dXM-Fo-cnG"/>
+                        <outlet property="saveButton" destination="ijY-po-YDe" id="QOn-fJ-Svl"/>
+                        <outlet property="searchBar" destination="5Kc-AV-ocT" id="BE8-ta-2aP"/>
+                        <outlet property="typesLabel" destination="zI2-Md-qey" id="n1O-V6-7Y5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PfH-Tg-5l7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
