Added update views and get details methods to detail view controller

--- a/Pokedex/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Pokedex/Base.lproj/Main.storyboard
@@ -129,6 +129,7 @@
                                 <rect key="frame" x="156.5" y="706.5" width="101" height="30"/>
                                 <state key="normal" title="Save Pokemon"/>
                                 <connections>
+                                    <action selector="saveTapped:" destination="qIw-F5-fgg" eventType="touchUpInside" id="Bwy-2x-xl0"/>
                                     <action selector="saveTapper:" destination="qIw-F5-fgg" eventType="touchUpInside" id="leF-Mo-QwB"/>
                                 </connections>
                             </button>
