--- a/Pokedex/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Pokedex/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
             </objects>
             <point key="canvasLocation" x="946" y="-181"/>
         </scene>
-        <!--Pokemon Search-->
+        <!--Pokemon-->
         <scene sceneID="RqH-RL-JRm">
             <objects>
                 <viewController id="qIw-F5-fgg" customClass="PokeSearchViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
@@ -70,19 +70,19 @@
                                 </connections>
                             </searchBar>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="NX3-0A-sWQ">
-                                <rect key="frame" x="20" y="567" width="374" height="119.5"/>
+                                <rect key="frame" x="20" y="567" width="374" height="208"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="AeD-uB-Yrl">
-                                        <rect key="frame" x="0.0" y="0.0" width="76" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="73" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="ID:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eae-Y8-y7p">
-                                                <rect key="frame" x="0.0" y="0.0" width="21" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="21" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWu-cE-G6d">
-                                                <rect key="frame" x="23" y="0.0" width="53" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWu-cE-G6d">
+                                                <rect key="frame" x="23" y="0.0" width="50" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -90,16 +90,16 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="lGc-C1-WNC">
-                                        <rect key="frame" x="0.0" y="49.5" width="135.5" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="79" width="103" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Types:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5w-3D-vQB">
-                                                <rect key="frame" x="0.0" y="0.0" width="51" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="51" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Types Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zI2-Md-qey">
-                                                <rect key="frame" x="53" y="0.0" width="82.5" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zI2-Md-qey">
+                                                <rect key="frame" x="53" y="0.0" width="50" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -107,16 +107,16 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="aSB-n8-EA2">
-                                        <rect key="frame" x="0.0" y="99" width="163.5" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="158" width="117" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Abilities:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XLv-m6-oGq">
-                                                <rect key="frame" x="0.0" y="0.0" width="65" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="65" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Abilities Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4t-ih-9D6">
-                                                <rect key="frame" x="67" y="0.0" width="96.5" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4t-ih-9D6">
+                                                <rect key="frame" x="67" y="0.0" width="50" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -126,7 +126,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijY-po-YDe">
-                                <rect key="frame" x="156.5" y="706.5" width="101" height="30"/>
+                                <rect key="frame" x="156.5" y="795" width="101" height="30"/>
                                 <state key="normal" title="Save Pokemon"/>
                                 <connections>
                                     <action selector="saveTapped:" destination="qIw-F5-fgg" eventType="touchUpInside" id="Mks-DE-BZW"/>
@@ -168,7 +168,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nXX-lL-DW3"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Pokemon Search" id="fYp-11-9MZ"/>
+                    <navigationItem key="navigationItem" title="Pokemon" id="fYp-11-9MZ"/>
                     <connections>
                         <outlet property="abilitiesLabel" destination="i4t-ih-9D6" id="K5S-ZX-c3C"/>
                         <outlet property="idLabel" destination="eWu-cE-G6d" id="aKh-05-fVq"/>
